--- a/latex/variables.tex
+++ b/latex/variables.tex
@@ -1,1 +1,1 @@
-\newcommand\ThesisTitle{Better time-frequency representations for audio beat tracking and music source separation}
+\newcommand\ThesisTitle{Nonstationary Gabor transforms for music source separation, onset detection, and beat tracking}
