Stuff is happening

--- a/latex/variables.tex
+++ b/latex/variables.tex
@@ -1,1 +1,1 @@
-\newcommand\ThesisTitle{Nonstationary Gabor transforms for music source separation, onset detection, and beat tracking}
+\newcommand\ThesisTitle{The Nonstationary Gabor transform in Music Information Retrieval}
