Save computation by re-using nsgt across tracks

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -131,7 +131,7 @@ This thesis is organized as follows. Section \ref{sec:theorystandard} will cover
 
 \todo[inline]{arbitrary f scales and time scales}
 
-\subsection{Implementation details and computation cost}
+\subsection{Code implementation and computation cost}
 
 \todo[inline]{how many windows, how many FFTs}
 
